# YTShorts-This-Day-in-History

./: .gitignore  LICENSE  pyproject.toml  token.pickle
tdih/: __init__.py  ai_services.py  config.py  main.py  models.py  services.py  slide_generator.py  storage.py  templates.py  uploader.py  video.py  youtube_uploader.py
tests/unit/: test_ai_services.py  test_config.py
