[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tdih"
version = "0.1.0"
description = ""
authors = ["Andrey Chibisov <andrey844@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "*"
google-auth = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
moviepy = "*"
openai = "*"
opencv-python = "*"
pydantic = "*"
python-dotenv = "*"
requests = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
isort = "*"
mypy = "*"
pytest = "*"

[tool.poetry.scripts]
create_shorts_for_today = "tdih.main:execute"
generate_events = "tdih.main:generate_events"
generate_videos = "tdih.main:generate_videos"
generate_event_from_text = "tdih.main:generate_event_from_text"
upload_videos_to_youtube = "tdih.main:upload_videos_to_youtube"